# football-pipeline

./: .env  .env.example  .flake8  .gitignore  .gitlab-ci.yml  CLAUDE.md  README.md  README_DEPLOY.md  app.py  pyproject.toml  requirements.txt  requirements_app.txt
.streamlit/: config.toml
data/cache/: matches_BL1_2025.parquet  matches_FL1_2025.parquet  matches_PD_2025.parquet  matches_PL_2025.parquet  matches_SA_2025.parquet  matches_all_2025.parquet
queries/: README.md  avg_goals_per_round.sql  home_advantage.sql  top_scorers.sql
scripts/: export_cache.py  ingest_all.py
src/: __init__.py  main.py
src/analytics/: __init__.py  athena_queries.py
src/config/: __init__.py  settings.py
src/extract/: __init__.py  football_api.py
src/ingestion/: __init__.py  fetch_matches.py
src/load/: __init__.py  s3_loader.py
src/ml/: evaluate.py  features.py  train.py
src/query/: __init__.py  athena_query.py
src/transform/: __init__.py  glue_transform.py  process_matches.py
src/utils/: __init__.py  logger.py
tests/: __init__.py  conftest.py  test_extract.py  test_ingestion.py  test_load.py  test_ml.py  test_query.py  test_transform.py
