[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "football-pipeline"
version = "0.1.0"
description = "Pipeline ETL pour les statistiques de matchs de football"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.black]
line-length = 88
target-version = ["py312"]
extend-exclude = '''
/(
  \.venv
  | \.git
  | graphify-out
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
