[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "football-pipeline"
version = "0.1.0"
description = "Pipeline ETL pour les statistiques de matchs de football"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.black]
line-length = 88
target-version = ["py312"]
extend-exclude = '''
/(
  \.venv
  | \.git
  | graphify-out
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/analytics/athena_queries.py",
    "src/extract/football_api.py",
    "src/load/s3_loader.py",
    "src/main.py",
    "src/query/athena_query.py",
    "src/transform/glue_transform.py",
]

[tool.coverage.report]
fail_under = 70
show_missing = true
